--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       data-setup="{}"
     >
       <source
-        src="https://hls-adaptive-bitrate-streaming.s3.ap-south-1.amazonaws.com/index.m3u8"
+        src="https://your-bucket-name.s3.amazonaws.com/path/to/playlist.m3u8"
         type="application/x-mpegURL"
       />
     </video>
